unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/rocketlane__RlWebhookRegisteredFields__mdt.object-meta.xml
<CustomObject>
    <label>sObject Registered Fields</label>
    <pluralLabel>sObjects Registered Fields</pluralLabel>
</CustomObject>