unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/fields/rocketlane__fieldsBeingListenedForUpdates__c.field-meta.xml
<CustomField>
    <fullName>rocketlane__fieldsBeingListenedForUpdates__c</fullName>
    <label>fieldsBeingListenedForUpdates</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>