unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/fields/rocketlane__integrationId__c.field-meta.xml
<CustomField>
    <fullName>rocketlane__integrationId__c</fullName>
    <label>integrationId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>