unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/fields/rocketlane__key__c.field-meta.xml
<CustomField>
    <fullName>rocketlane__key__c</fullName>
    <externalId>true</externalId>
    <label>key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>