unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/fields/rocketlane__listenedFieldsCount__c.field-meta.xml
<CustomField>
    <fullName>rocketlane__listenedFieldsCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>listenedFieldsCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>