unpackaged/main/default/objects/rocketlane__RlWebhookRegisteredFields__mdt/fields/rocketlane__sobjectType__c.field-meta.xml
<CustomField>
    <fullName>rocketlane__sobjectType__c</fullName>
    <label>sObjectType</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>